--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "AmazingVedioEdit",
+  "name": "amazing-vedio-edit",
   "version": "1.0.0",
   "description": "a amazing video edit project",
   "main": "index.js",
@@ -7,9 +7,10 @@
   "author": "yangjunyi <softenginejy@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
@@ -21,9 +22,9 @@
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
-    "sass": "^1.53.0",
-    "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
+    "less": "^4.1.3",
+    "less-loader": "^11.0.0",
     "ts-loader": "^9.3.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
@@ -31,7 +32,27 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.3",
+    "antd": "^4.21.4",
+    "babel-plugin-import": "^1.13.5",
+    "customize-cra": "^1.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-app-rewired": "^2.2.1",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
+    "react-scripts": "^5.0.1",
+    "typescript": "^4.7.4"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
